# ci-cd-playground

./: .gitignore  README.md  calculator.py  demo.ipynb  pyproject.toml  requirements.txt  test_calculator.py  test_exchange_rate.py
.github/workflows/: build-wheel.yml  ci.yml
calculator/: __init__.py
exchange_rate/: __init__.py
